--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,15 +22,19 @@ a {
   color: #333;
 }
 
+a:hover {
+  transform: scale(0.995);
+}
+
 img {
   width: 100%;
   border-radius: 4px;
 }
 
 header {
-  background: steelblue;
-  color: #fff;
-  padding: 5px;
+  background: rgb(22, 22, 22);
+  color: rgb(192, 192, 192);
+  padding: 25px;
   margin-bottom: 40px;
 }
 
@@ -47,7 +51,7 @@ header a {
 
 .btn {
   display: inline-block;
-  background: steelblue;
+  background: rgb(110, 4, 4);
   color: #fff;
   border: none;
   padding: 8px 16px;
