--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,6 +42,21 @@ header a {
   color: #fff;
 }
 
+footer {
+  background: rgb(105, 105, 105);
+  color: rgb(141, 141, 141);
+  padding: 45px;
+  margin-bottom: 40px;
+}
+
+footer a {
+  color: #fff;
+}
+
+.single-post {
+  padding-bottom: 25px;
+}
+
 .container {
   max-width: 768px;
   margin: auto;
@@ -81,6 +96,7 @@ header a {
   grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .card {
@@ -89,8 +105,18 @@ header a {
   box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
 }
 
+.card-title {
+  text-align: center;
+  padding-top: 10px;
+}
+
+.card-date {
+  color: rgb(150, 150, 150);
+  font-size: 90%;
+}
+
 .card-page {
-  padding: 15px 30px;
+  padding: 10px 30px;
 }
 
 .post-title {
@@ -98,9 +124,19 @@ header a {
 }
 
 .post-date {
-  background: #f4f4f4;
+  color: rgb(150, 150, 150);
   margin-bottom: 20px;
   padding: 3px 10px;
+}
+
+.post-image-caption {
+  color: rgb(150, 150, 150);
+  text-align: center;
+  padding: 7px 10px;
+}
+
+.post-author {
+  color: rgb(150, 150, 150);
 }
 
 .post-body ul,
