--- a/styles/globals.css
+++ b/styles/globals.css
@@ -129,6 +129,14 @@ footer a {
   padding: 3px 10px;
 }
 
+.post-author-date {
+  color: rgb(150, 150, 150);
+  text-align: center;
+  margin-bottom: 20px;
+  padding: 3px 10px;
+  font-style: italic;
+}
+
 .post-image-caption {
   color: rgb(150, 150, 150);
   text-align: center;
